--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SECRETJWT=en lugar de la mancha
 PORT=3200
 PGUSER=postgres
-PGHOST=monorail.proxy.rlwy.net
+PGHOST=roundhouse.proxy.rlwy.net
 PGDB=railway
-PGPASSWD=OcODCqaSpVMYZAwtSXAnbiwvBrZFImlM
-PGPORT=42004
+PGPASSWD=GTGGHfeqgEazyMbnCcOWLDXXjDyyuEeV
+PGPORT=36026
